tercera entrega js

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El Carrito</title>
+    <title>Relojes Morgan</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1> Los relojes de nico</h1>
+    <div class="tienda">
+        <h1 class="titulo">Bienvenido a Morgan Relojes</h1>
+        <div class="menu"></div>
+        <button class="btn filtrarCaros">Filtrar por precio (más caro a más barato)</button>
+        <button class="btn filtrarBaratos">Filtrar por precio (más barato a más caro)</button>
+        <div class="relojes"></div>
+        <button class="btn finalizarCompra">Finalizar Compra</button>
+    </div>
 
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
